-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.1, 6.4.0
-
None
-
-
f691637777 (qt/qtdatavis3d/dev) 2dbf7a5747 (qt/qtdatavis3d/6.4) 2dbf7a5747 (qt/tqtc-qtdatavis3d/6.4) f691637777 (qt/tqtc-qtdatavis3d/dev) 2dbf7a5747 (qt/qtdatavis3d/6.4.1) 2dbf7a5747 (qt/tqtc-qtdatavis3d/6.4.1)
When compiling project that links both QtMultimedia and QtDataVisualization, the linker fails
wasm-ld: error: duplicate symbol: qInitResources_shaders()
>>> defined in /home/tumi/Qt/6.4.0/wasm_32/lib/objects-Release/Multimedia_resources_1/.rcc/qrc_shaders.cpp.o
>>> defined in /home/tumi/Qt/6.4.0/wasm_32/lib/objects-Release/DataVisualization_resources_1/.rcc/qrc_shaders.cpp.o
wasm-ld: error: duplicate symbol: qCleanupResources_shaders()
>>> defined in /home/tumi/Qt/6.4.0/wasm_32/lib/objects-Release/Multimedia_resources_1/.rcc/qrc_shaders.cpp.o
>>> defined in /home/tumi/Qt/6.4.0/wasm_32/lib/objects-Release/DataVisualization_resources_1/.rcc/qrc_shaders.cpp.o