Rename shader and mesh resource files

WASM gets a conflict with Multimedia if the resource file is named
just shaders. Doing the same for meshes to avoid future conflicts with
some other modules.

Fixes: QTBUG-107505
Change-Id: I9107f270d8679d1a50ec8127d15cb0c50856eb7c
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tuomo Pelkonen <tuomo.pelkonen@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit f691637777d31503f6681ed8c89c83e88c09a4c3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>